# operating-system-IPC-and-synchronisation

./: CMakeLists.txt  MAKEFILE  README.md  main.c  util.h  windy_fountain_mac
IPC/: ipc.c  ipc.h
process/: handling.c  handling.h
supervisor/: camera_supervisor.c  camera_supervisor.h  environment_supervisor.c  environment_supervisor.h
